# dd-win-prof

./: .clang-format  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CODEOWNERS  CODE_REVIEW_SUMMARY.md  CODE_REVIEW_UPDATE.md  CONTRIBUTING.md  LICENSE-3rdparty.csv  NOTICE  PROPOSED_FIX_ThreadList.md  README.md  REVIEW_FINDINGS.md
.claude/skills/dd-win-prof-release/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/chainguard/: self.github.release.publish.sts.yaml  self.release.build-and-release.sts.yaml
.github/workflows/: e2e.yml  obfuscation.yml  release-test.yml  release.yml  test.yml
cmake/: asan.cmake  clang-format.cmake
e2e-tests/: README.md  README_vulkan.md  capture-pprof.ps1  copy_vulkan_assets.ps1  patch_vulkan_for_profiling.ps1  setup_glm.ps1  validate-runner-sym.ps1  vulcan_quickstart.ps1
e2e-tests/runner-scenarios/scenario_1/: expected_profile.json
e2e-tests/runner-scenarios/scenario_4/: expected_profile.json
e2e-tests/runner-scenarios/scenario_5/: expected_profile.json  scenario.env
licenses/: BSD-3-Clause.txt  MIT.txt
obfuscation/: BUILD_INSTRUCTIONS.md  CHANGES_SUMMARY.md  CMakeLists.txt  DEVELOPMENT.md  FINAL_OMAP_SUMMARY.md  OMAP_IMPLEMENTATION.md  OMAP_QUICK_REFERENCE.md  OMAP_REALITY.md  OMAP_TESTING.md  RVA_CONFLICT_DETECTION.md  Symbols.slnx  TEST_UPDATES_SUMMARY.md  build.bat  build.ps1  readme.md  test.ps1
obfuscation/ObfSymbols/: CMakeLists.txt  ObfSymbols.cpp  ObfSymbols.rc  ObfSymbols.vcxproj  ObfSymbols.vcxproj.filters  PdbParser.cpp  PdbParser.h  TestSymbols.sym  TestSymbols_obf.sym  resource.h
obfuscation/TestSymbols/: CMakeLists.txt  TestSymbols.cpp  TestSymbols.vcxproj  TestSymbols.vcxproj.filters
obfuscation/TestSymbolsDll/: CMakeLists.txt  TestSymbolsDll.cpp  TestSymbolsDll.h  TestSymbolsDll.vcxproj
plans/: rum_context_phase2_view_timeline_json.plan.md  rum_context_phase3_multi_sessions.plan.md  rum_context_phase_1.plan.md
scripts/: check-version.ps1  download-libdatadog.ps1  download-spdlog.ps1  generate-vs.ps1  test-release.ps1
src/: CMakeLists.txt  WindowsProfiler.sln
src/InprocProfiling/: CollectorBase.h  Configuration.cpp  Configuration.h  CpuTimeProvider.cpp  CpuTimeProvider.h  EnvironmentVariables.h  ISamplesProvider.h  InprocProfiling.cpp  InprocProfiling.h  InprocProfiling.vcxproj  InprocProfiling.vcxproj.filters  LibDatadogHelper.h  Log.h  OpSysTools.h  OsSpecificApi.cpp  OsSpecificApi.h  OsSysTools.cpp  PprofAggregator.cpp  PprofAggregator.h  ProfileExporter.cpp  ProfileExporter.h  Profiler.cpp  Profiler.h  ProfilingConstants.h  Sample.cpp  Sample.h  SampleValueType.h  SampleValueTypeProvider.cpp  SampleValueTypeProvider.h  SamplesCollector.cpp  SamplesCollector.h  ScopedHandle.h  StackFrameCollector.cpp  StackFrameCollector.h  StackSamplerLoop.cpp  StackSamplerLoop.h  Symbolication.cpp  Symbolication.h  TagsHelper.cpp  TagsHelper.h  (+7 more)
src/ProfilerInjector/: CMakeLists.txt  ProfilerInjector.cpp  ProfilerInjector.vcxproj  ProfilerInjector.vcxproj.filters  README.md
src/Runner/: CMakeLists.txt  Helpers.cpp  Helpers.h  README.md  Runner.cpp  Runner.vcxproj  Runner.vcxproj.filters  Spinner.cpp  Spinner.h  find-runner.ps1  run-local-debug.ps1  run-noenvvars.ps1  run-with-envvars.ps1
src/Tests/: CMakeLists.txt  ConfigurationTests.cpp  CpuOverlapTests.cpp  DynamicModuleTests.cpp  PprofAggregatorTests.cpp  ProfileExporterTests.cpp  README.md  RumContextTests.cpp  SymbolicationTests.cpp  Tests.vcxproj  Tests.vcxproj.filters  ThreadListTests.cpp  UuidTests.cpp  main.cpp  pch.cpp  pch.h  targetver.h
src/dd-win-prof/: CMakeLists.txt  CollectorBase.h  Configuration.cpp  Configuration.h  CpuTimeProvider.cpp  CpuTimeProvider.h  EnvironmentVariables.h  ISamplesProvider.h  LibDatadogHelper.h  Log.h  OpSysTools.h  OsSpecificApi.cpp  OsSpecificApi.h  OsSysTools.cpp  PprofAggregator.cpp  PprofAggregator.h  ProfileExporter.cpp  ProfileExporter.h  Profiler.cpp  Profiler.h  ProfilerVersion.h  ProfilingConstants.h  Resource.rc  RumContext.h  Sample.cpp  Sample.h  SampleValueType.h  SampleValueTypeProvider.cpp  SampleValueTypeProvider.h  SamplesCollector.cpp  SamplesCollector.h  ScopedHandle.h  StackFrameCollector.cpp  StackFrameCollector.h  StackSamplerLoop.cpp  StackSamplerLoop.h  Symbolication.cpp  Symbolication.h  TagsHelper.cpp  TagsHelper.h  (+19 more)
src/integration-tests/: README.md  install-dependencies.ps1  pprof_utils.py  profile_pb2.py  requirements.txt  rum_test_helpers.ps1  test_rum_scenario.ps1  test_rum_scenario_send.ps1
src/reference/: readme.txt
tests/: README_profiler_integration.md  README_vulkan_script.md  patch_vulkan_for_profiling.ps1  vulcan_quickstart.ps1
